--- a/GTSW/Bumblebee/Bumblebee/SpeedChart20sUC.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SpeedChart20sUC.xaml
@@ -1,14 +1,11 @@
-﻿<UserControl x:Class="Bumblebee.SpeedChartUC"
+﻿<UserControl x:Class="Bumblebee.SpeedChart20sUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Bumblebee"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="660">
-    <UserControl.Resources>
-        <local:PointsToPathConverter x:Key="PointsToPathConverter"/>
-    </UserControl.Resources>
+             d:DesignHeight="150" d:DesignWidth="560">
     <DockPanel Background="LightGray">
         <StackPanel Background="White" DockPanel.Dock="Left" Width="60">
             <Label Height="25" Name="lblSpeed4" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="{Binding Path=Speed4,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
@@ -19,36 +16,30 @@
         </StackPanel>
         <StackPanel Background="White" DockPanel.Dock="Bottom" Height="25" Orientation="Horizontal">
             <Label Width="50" Content="0秒"></Label>
-            <Label Width="50" Content="5秒"></Label>
+            <Label Width="50" Content="2秒"></Label>
+            <Label Width="50" Content="4秒"></Label>
+            <Label Width="50" Content="6秒"></Label>
+            <Label Width="50" Content="8秒"></Label>
             <Label Width="50" Content="10秒"></Label>
-            <Label Width="50" Content="15秒"></Label>
-            <Label Width="50" Content="20秒"></Label>
-            <Label Width="50" Content="25秒"></Label>
-            <Label Width="50" Content="30秒"></Label>
-            <Label Width="50" Content="35秒"></Label>
-            <Label Width="50" Content="40秒"></Label>
-            <Label Width="50" Content="55秒"></Label>
-            <Label Width="50" Content="50秒"></Label>
-            <Label Width="50" Content="55秒"></Label>
+            <Label Width="50" Content="12秒"></Label>
+            <Label Width="50" Content="14秒"></Label>
+            <Label Width="50" Content="16秒"></Label>
+            <Label Width="50" Content="18秒"></Label>
         </StackPanel>
-        <Canvas Height="125" Width="600" Name="canvasTraces">
+        <Canvas Height="125" Width="500" Name="canvasTraces">
             <Path Stroke="White" StrokeThickness="1">
                 <Path.Data>
                     <PathGeometry>
                         <PathFigure IsClosed="False" StartPoint="0,0">
                             <LineSegment Point="0, 25"/>
-                            <LineSegment Point="600, 25"/>
-                            <LineSegment Point="600, 50"/>
+                            <LineSegment Point="500, 25"/>
+                            <LineSegment Point="500, 50"/>
                             <LineSegment Point="0, 50"/>
                             <LineSegment Point="0, 75"/>
-                            <LineSegment Point="600, 75"/>
-                            <LineSegment Point="600, 100"/>
+                            <LineSegment Point="500, 75"/>
+                            <LineSegment Point="500, 100"/>
                             <LineSegment Point="0, 100"/>
                             <LineSegment Point="0, 125"/>
-                            <LineSegment Point="600, 125"/>
-                            <LineSegment Point="550, 125"/>
-                            <LineSegment Point="550, 0"/>
-                            <LineSegment Point="500, 0"/>
                             <LineSegment Point="500, 125"/>
                             <LineSegment Point="450, 125"/>
                             <LineSegment Point="450, 0"/>
@@ -69,16 +60,15 @@
                             <LineSegment Point="50, 125"/>
                             <LineSegment Point="50, 0"/>
                             <LineSegment Point="0, 0"/>
-                            <LineSegment Point="0, 0"/>
-                            <LineSegment Point="600, 0"/>
-                            <LineSegment Point="600, 125"/>
                             <LineSegment Point="0, 125"/>
+                            <LineSegment Point="500, 125"/>
+                            <LineSegment Point="500, 0"/>
                             <LineSegment Point="0, 0"/>
                         </PathFigure>
                     </PathGeometry>
                 </Path.Data>
             </Path>
-            <Path Name="pathSpeed" Stroke="DarkRed" StrokeThickness="1" Data="{Binding ElementName=Window, Path=Points, Converter={StaticResource ResourceKey=PointsToPathConverter}}">
+            <Path Name="pathSpeed" Stroke="DarkRed" StrokeThickness="1">
             </Path>
         </Canvas>
     </DockPanel>
