--- a/GTSW/Bumblebee/Bumblebee/SpeedChartUC.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SpeedChartUC.xaml
@@ -11,26 +11,56 @@
     </UserControl.Resources>
     <DockPanel Background="LightGray">
         <StackPanel Background="White" DockPanel.Dock="Left" Width="60">
-            <Label Height="25" Name="lblSpeed5" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="{Binding Path=Speed4,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
-            <Label Height="25" Name="lblSpeed4" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="{Binding Path=Speed3,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
-            <Label Height="25" Name="lblSpeed3" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="{Binding Path=Speed2,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
-            <Label Height="25" Name="lblSpeed2" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="{Binding Path=Speed1,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
-            <Label Height="25" Name="lblSpeed1" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="{Binding Path=Speed0,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
-            <Label Height="25" Name="lblSpeed0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="{Binding Path=Speed0,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
+            <Label Height="2" Background="LightGray"/>
+            <Label Height="25" Name="lblSpeed5" Margin="0,-3, 0, 0"
+                   HorizontalContentAlignment="Right" VerticalContentAlignment="Top" 
+                   Content="{Binding Path=Speed4,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
+            <Label Height="2" Background="LightGray"/>
+            <Label Height="26" Name="lblSpeed4"  Margin="0,-3, 0, 0"
+                   HorizontalContentAlignment="Right" VerticalContentAlignment="Top"
+                   Content="{Binding Path=Speed3,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
+            <Label Height="2" Background="LightGray"/>
+            <Label Height="26" Name="lblSpeed3"  Margin="0,-3, 0, 0"
+                   HorizontalContentAlignment="Right" VerticalContentAlignment="Top"
+                   Content="{Binding Path=Speed2,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
+            <Label Height="2" Background="LightGray"/>
+            <Label Height="26" Name="lblSpeed2"  Margin="0,-3, 0, 0"
+                   HorizontalContentAlignment="Right" VerticalContentAlignment="Top" 
+                   Content="{Binding Path=Speed1,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
+            <Label Height="2" Background="LightGray"/>
+            <Label Height="26" Name="lblSpeed1"  Margin="0,-3, 0, 0"
+                   HorizontalContentAlignment="Right" VerticalContentAlignment="Top" 
+                   Content="{Binding Path=Speed0,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
+            <Label Height="2" Background="LightGray"/>
+            <Label Height="26" Name="lblSpeed0"  Margin="0,-3, 0, 0"
+                   HorizontalContentAlignment="Right" VerticalContentAlignment="Top" 
+                   Content="{Binding Path=Speed0,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Label>
         </StackPanel>
         <StackPanel Background="White" DockPanel.Dock="Bottom" Height="25" Orientation="Horizontal">
-            <Label Width="50" Content="0秒"></Label>
-            <Label Width="50" Content="5秒"></Label>
-            <Label Width="50" Content="10秒"></Label>
-            <Label Width="50" Content="15秒"></Label>
-            <Label Width="50" Content="20秒"></Label>
-            <Label Width="50" Content="25秒"></Label>
-            <Label Width="50" Content="30秒"></Label>
-            <Label Width="50" Content="35秒"></Label>
-            <Label Width="50" Content="40秒"></Label>
-            <Label Width="50" Content="55秒"></Label>
-            <Label Width="50" Content="50秒"></Label>
-            <Label Width="50" Content="55秒"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="50" Content="0秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="5秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="10秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="15秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="20秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="25秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="30秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="35秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="40秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="55秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="50秒" Margin="-3,0,0,0"></Label>
+            <Label Width="2" Background="LightGray"/>
+            <Label Width="51" Content="55秒" Margin="-3,0,0,0"></Label>
         </StackPanel>
         <Canvas Height="125" Width="600" Name="canvasTraces">
             <Path Stroke="White" StrokeThickness="1">
